Feat: Adding and Removing Documents now works