@@ -10,9 +10,11 @@ import at.cms.api.QdrantService;
 import java.util.List;
 import at.cms.api.EmbeddingService;
 import at.cms.training.dto.EmbeddingDto;
+import org.springframework.http.HttpStatus;
+import java.util.Collections;
 
 @RestController
-@RequestMapping("/api/prompt")
+@RequestMapping("/api")
 public class PromptController {
     private final QdrantService qdrantService;
     private final EmbeddingService embeddingService;
@@ -22,21 +24,30 @@ public class PromptController {
         this.embeddingService = new EmbeddingService();
     }
 
-    @PostMapping
-    public ResponseEntity<List<String>> processPrompt(@RequestBody PromptRequest request) {
+    @PostMapping("/prompt")
+    public ResponseEntity<?> processPrompt(@RequestBody PromptRequest request) {
         try {
-            // Convert prompt into chunks and then to vector
-            List<String> promptChunks = List.of();
+            if (request.getPrompt() == null || request.getPrompt().trim().isEmpty()) {
+                return ResponseEntity.badRequest().body("Prompt cannot be empty");
+            }
+
+            // Convert prompt to vector
+            List<String> promptChunks = Collections.singletonList(request.getPrompt());
             EmbeddingDto embeddings = embeddingService.getEmbeddings(promptChunks);
             
             // Search the chunks in Qdrant
             List<String> results = qdrantService.searchDocumentChunks(embeddings.getEmbeddings()[0]);
             
-            return ResponseEntity.ok(results);
+            if (results.isEmpty()) {
+                return ResponseEntity.ok("No relevant documents found for the given prompt.");
+            }
             
-            //Integer[] ids = qdrantService.search_Document_Chunks(request.getPrompt());
+            return ResponseEntity.ok(results);
         } catch (Exception e) {
-            return null;
+            e.printStackTrace();
+            return ResponseEntity
+                .status(HttpStatus.INTERNAL_SERVER_ERROR)
+                .body("Error processing prompt: " + e.getMessage());
         }
     }
 } 
